--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,22 +21,23 @@ variables:
 .gcp_auth:
   id_tokens:
     GCP_ID_TOKEN:
-      aud: https://iam.googleapis.com/${GCP_WIF_PROVIDER}
+      aud: https://iam.googleapis.com/projects/514436528658/locations/global/workloadIdentityPools/gitlab-pool/providers/gitlab-provider
   before_script: &gcp_setup
     # Création du fichier de configuration pour l'ADC (Application Default Credentials)
-    - echo "${GCP_ID_TOKEN}" > .google_id_token
+    # Utilisation de ${CI_PROJECT_DIR} pour garantir le chemin absolu
+    - echo "${GCP_ID_TOKEN}" > ${CI_PROJECT_DIR}/.google_id_token
     - |
       echo "{
         \"type\": \"external_account\",
-        \"audience\": \"//iam.googleapis.com/${GCP_WIF_PROVIDER}\",
+        \"audience\": \"//iam.googleapis.com/projects/514436528658/locations/global/workloadIdentityPools/gitlab-pool/providers/gitlab-provider\",
         \"subject_token_type\": \"urn:ietf:params:oauth:token-type:jwt\",
         \"token_url\": \"https://sts.googleapis.com/v1/token\",
-        \"service_account_impersonation_url\": \"https://iamcredentials.googleapis.com/v1/projects/-/serviceAccounts/${GCP_SERVICE_ACCOUNT}:generateAccessToken\",
+        \"service_account_impersonation_url\": \"https://iamcredentials.googleapis.com/v1/projects/-/serviceAccounts/ecoarch-ci@ecoarch-mvp-1768828854.iam.gserviceaccount.com:generateAccessToken\",
         \"credential_source\": {
-          \"file\": \".google_id_token\"
+          \"file\": \"${CI_PROJECT_DIR}/.google_id_token\"
         }
-      }" > .google_creds.json
-    - export GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/.google_creds.json
+      }" > ${CI_PROJECT_DIR}/.google_creds.json
+    - export GOOGLE_APPLICATION_CREDENTIALS=${CI_PROJECT_DIR}/.google_creds.json
 
 terraform_plan:
   extends: .gcp_auth
