--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,9 +77,14 @@ infracost_analysis:
     
     # 3. Affichage du rapport (Parser)
     - python src/parser.py
-    
+    # Nouveau : Poster le commentaire (ne bloquera pas si mr_iid est absent)
+    - python src/gitlab_comment.py
+
     # 4. Crash Test Final (Budget Gate)
     - python src/budget_gate.py
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   artifacts:
     paths:
       - infracost-report.json
