--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ pytest-mock==3.12.0
 
 # API & Database
 requests==2.31.0
-supabase==2.3.7
+supabase==2.10.0
+httpx==0.27.2
+pydantic==2.9.2
+pydantic-core==2.23.4
