--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-# Core
+# --- Core & Data ---
 pandas==2.2.0
 python-dotenv==1.0.1
+pydantic==2.9.2
+pydantic-core==2.23.4
 
-# Testing
-pytest==8.0.0
-pytest-mock==3.12.0
+# --- Dashboard & Visualization ---
+streamlit
+plotly
 
-# API & Database
+# --- API & Database ---
 requests==2.31.0
 supabase==2.10.0
 httpx==0.27.2
-pydantic==2.9.2
-pydantic-core==2.23.4
+
+# --- Testing ---
+pytest==8.0.0
+pytest-mock==3.12.0
