--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,28 @@
-# Supabase Configuration
+# ═══════════════════════════════════════════════════════════════
+# EcoArch – Variables d'environnement
+# Copier en .env et remplir les valeurs
+# ═══════════════════════════════════════════════════════════════
+
+# --- Supabase ---
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=your-service-key-here
 
-# GCP Configuration
-GCP_PROJECT_ID=simulation-project
+# --- GCP ---
+GCP_PROJECT_ID=ecoarch-mvp-1768828854
 
-# Budget Configuration
-BUDGET_LIMIT=50.0
+# --- Reflex Frontend ---
+# En local : http://localhost:8000
+# En prod  : injecté via Cloud Run env vars
+API_URL=http://localhost:8000
 
-# Infracost Configuration
+# --- Infracost ---
+INFRACOST_API_KEY=your-infracost-api-key
 INFRACOST_TIMEOUT=30
+
+# --- Redis (Celery broker) ---
+# En local via docker-compose : redis://redis:6379/0
+# En prod sans Redis : Celery désactivé, fallback sync
+REDIS_URL=redis://redis:6379/0
+
+# --- Budget ---
+BUDGET_LIMIT=50.0
