--- a/.dockerignore
+++ b/.dockerignore
@@ -1,58 +1,42 @@
-# --- Python ---
-__pycache__
+# === Python ===
+__pycache__/
 *.pyc
 *.pyo
-*.pyd
-venv
-.venv
-env
-pip-log.txt
-pip-delete-this-directory.txt
-
-# --- Node / Reflex Frontend ---
-node_modules
-npm-debug.log
-yarn-error.log
-.web
-.reflex
-# Si vous avez un dossier de build frontend spécifique autre que .web
-dist
-build
-
-# --- Git & Versionning ---
-.git
-.gitignore
-.gitattributes
-
-# --- Environnement & Sécurité (TRÈS IMPORTANT) ---
-.env
-.env.local
-.env.*
-# Clés SSH ou certificats locaux éventuels
-*.pem
-*.key
-
-# --- IDE & Éditeurs (Inutile dans le conteneur) ---
-.vscode
-.idea
-*.swp
-*.swo
-.DS_Store
-
-# --- Docker ---
-# On ne veut pas copier le Dockerfile lui-même DANS l'image (redondant)
-Dockerfile
-docker-compose.yml
-docker-compose.*.yml
-.dockerignore
-
-# --- Tests & Qualité de code ---
-# Inutile de charger les rapports de tests ou de couverture en prod
-.pytest_cache
+venv/
+.venv/
+.pytest_cache/
+.mypy_cache/
 .coverage
-htmlcov
-.mypy_cache
+htmlcov/
 
-# --- Infracost (Spécifique à votre projet) ---
-# Infracost peut générer des logs ou des caches locaux
-.infracost
+# === Node / Reflex build artifacts ===
+frontend/.web/
+frontend/.states/
+node_modules/
+
+# === Git & CI ===
+.git/
+.gitignore
+.gitlab-ci.yml
+
+# === Sécurité (CRITIQUE) ===
+.env
+.env.*
+!.env.example
+gcp-key.json*
+
+# === Documentation & rapports ===
+*.md
+*.html
+rapport_EcoArch.py
+
+# === Tests & Infra (pas dans l'image) ===
+tests/
+infra/
+requirements-dev.txt
+
+# === Docker meta ===
+Dockerfile
+docker-compose*.yml
+.dockerignore
+deploy.sh
