--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,15 @@ variables:
   INFRACOST_VERSION: "v0.10.43"
   # Pip caching – accélère toutes les étapes Python
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  # GitLab HTTP Backend – cohérent avec backend "http" {} dans main.tf
+  TF_HTTP_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra"
+  TF_HTTP_LOCK_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra/lock"
+  TF_HTTP_UNLOCK_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra/lock"
+  TF_HTTP_USERNAME: "gitlab-ci-token"
+  TF_HTTP_PASSWORD: "${CI_JOB_TOKEN}"
+  TF_HTTP_LOCK_METHOD: "POST"
+  TF_HTTP_UNLOCK_METHOD: "DELETE"
+  TF_HTTP_RETRY_WAIT_MIN: "5"
 
 # ── Cache global pip ────────────────────────────────────────
 cache: &pip_cache
@@ -64,10 +73,19 @@ terraform_plan:
     name: hashicorp/terraform:${TERRAFORM_VERSION}
     entrypoint: [""]
   script:
-    - cd $TF_ROOT
-    - terraform init -backend-config="bucket=${TF_STATE_BUCKET}" -backend-config="prefix=${TF_STATE_PREFIX}"
-    - terraform plan -out=../tfplan.binary
-    - terraform show -json ../tfplan.binary > ../plan.json
+    - cd ${CI_PROJECT_DIR}/${TF_ROOT}
+    - |
+      terraform init -reconfigure \
+        -backend-config="address=${TF_HTTP_ADDRESS}" \
+        -backend-config="lock_address=${TF_HTTP_LOCK_ADDRESS}" \
+        -backend-config="unlock_address=${TF_HTTP_UNLOCK_ADDRESS}" \
+        -backend-config="username=${TF_HTTP_USERNAME}" \
+        -backend-config="password=${TF_HTTP_PASSWORD}" \
+        -backend-config="lock_method=POST" \
+        -backend-config="unlock_method=DELETE" \
+        -backend-config="retry_wait_min=5"
+    - terraform plan -out=${CI_PROJECT_DIR}/tfplan.binary
+    - terraform show -json ${CI_PROJECT_DIR}/tfplan.binary > ${CI_PROJECT_DIR}/plan.json
   artifacts:
     paths:
       - plan.json
@@ -144,9 +162,18 @@ infracost_analysis:
     - python -m pytest --version
     - export PYTHONPATH=${CI_PROJECT_DIR}
   script:
-    # Terraform plan (chemin absolu)
+    # Terraform plan (chemin absolu + backend HTTP cohérent avec main.tf)
     - cd ${CI_PROJECT_DIR}/${TF_ROOT}
-    - terraform init -backend-config="bucket=${TF_STATE_BUCKET}" -backend-config="prefix=${TF_STATE_PREFIX}"
+    - |
+      terraform init -reconfigure \
+        -backend-config="address=${TF_HTTP_ADDRESS}" \
+        -backend-config="lock_address=${TF_HTTP_LOCK_ADDRESS}" \
+        -backend-config="unlock_address=${TF_HTTP_UNLOCK_ADDRESS}" \
+        -backend-config="username=${TF_HTTP_USERNAME}" \
+        -backend-config="password=${TF_HTTP_PASSWORD}" \
+        -backend-config="lock_method=POST" \
+        -backend-config="unlock_method=DELETE" \
+        -backend-config="retry_wait_min=5"
     - terraform plan -out=finops_local.binary
     # Analyse Infracost (sortie en chemin absolu)
     - infracost breakdown --path finops_local.binary --format json --out-file ${CI_PROJECT_DIR}/infracost-report.json
@@ -183,16 +210,7 @@ terraform_deploy:
   image:
     name: hashicorp/terraform:${TERRAFORM_VERSION}
     entrypoint: [""]
-  variables:
-    # GitLab HTTP Backend pour stocker le Terraform State
-    TF_HTTP_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra"
-    TF_HTTP_LOCK_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra/lock"
-    TF_HTTP_UNLOCK_ADDRESS: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/ecoarch-infra/lock"
-    TF_HTTP_USERNAME: "gitlab-ci-token"
-    TF_HTTP_PASSWORD: "${CI_JOB_TOKEN}"
-    TF_HTTP_LOCK_METHOD: "POST"
-    TF_HTTP_UNLOCK_METHOD: "DELETE"
-    TF_HTTP_RETRY_WAIT_MIN: "5"
+  # TF_HTTP_* variables héritées du scope global
   script:
     - echo "═══════════════════════════════════════════════"
     - echo "  EcoArch Deploy – ID ${ECOARCH_DEPLOYMENT_ID:-manual}"
