fix(ci+chart): environment name ending with '/' + donut chart per-resource colors
- .gitlab-ci.yml: environment name uses ${ECOARCH_DEPLOYMENT_ID:-manual}
  (prevents '/' suffix when var is unset, which made YAML invalid)
- state.py: chart_data shows each resource individually (not grouped by category)
- state.py: _categorize_resource matches actual display_name patterns
  (VM/e2-/n1- → Compute, SQL/db- → SQL, GCS/bucket → Storage, lb → Network)
- Each resource gets its own donut slice with type-based color

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,5 +251,5 @@ terraform_deploy:
     - if: $CI_PIPELINE_SOURCE == "web"
       when: manual
   environment:
-    name: ${ECOARCH_ACTION:-deploy}/$ECOARCH_DEPLOYMENT_ID
+    name: ${ECOARCH_ACTION:-deploy}/${ECOARCH_DEPLOYMENT_ID:-manual}
     action: start
