chore: cleanup + README complet avec diagrammes Mermaid
Nettoyage:
- Supprime src/tasks.py + tests/test_tasks.py (legacy Celery, non utilisé)
- Supprime src/utils/ (répertoire vide)
- Supprime gcp-key.json + ecoarch-deploy-key.json (sécurité)
- Corrige terraform.tfvars (variables obsolètes instance_name/machine_type)
- Met à jour docker-compose.yml (retire Redis/gcp-key volume)
- Met à jour requirements.txt (retire celery/redis)
- Met à jour .env.example (retire Redis, ajoute GITLAB_API_TOKEN)

README.md:
- Réécriture complète du README avec documentation exhaustive
- 6 diagrammes Mermaid colorés (architecture, pipeline, flux deploy,
  Terraform dynamique, startup scripts, audit state machine)
- Arborescence annotée du projet
- Tables détaillées (variables TF, software stacks, secrets, APIs GCP)
- Guide installation local / Docker / Cloud Run
- Section tests (169 tests après nettoyage Celery)

--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,10 @@ API_URL=http://localhost:8000
 INFRACOST_API_KEY=your-infracost-api-key
 INFRACOST_TIMEOUT=30
 
-# --- Redis (Celery broker) ---
-# En local via docker-compose : redis://redis:6379/0
-# En prod sans Redis : Celery désactivé, fallback sync
-REDIS_URL=redis://redis:6379/0
+# --- GitLab CI/CD ---
+GITLAB_TRIGGER_TOKEN=glptt-your-trigger-token
+GITLAB_API_TOKEN=glpat-your-read-api-token
+GITLAB_PROJECT_ID=77811562
 
 # --- Budget ---
-BUDGET_LIMIT=50.0
+ECOARCH_BUDGET_LIMIT=50.0
