--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,6 +223,8 @@ cloud_run_deploy:
       aud: https://iam.googleapis.com/projects/514436528658/locations/global/workloadIdentityPools/gitlab-pool/providers/gitlab-provider
   before_script:
     - *gcp_setup
+    # Auth explicite pour que docker-credential-gcloud fonctionne
+    - gcloud auth login --cred-file="${GOOGLE_APPLICATION_CREDENTIALS}" --quiet
     - apt-get update -qq && apt-get install -y -qq docker.io >/dev/null
   script:
     # ── Auto-version ──
