feat: amélioration de la validation et de l'analyse statique
- Mise à jour de la configuration CI dans .gitlab-ci.yml pour inclure l'analyse statique de l'ensemble du répertoire src/ et de frontend/frontend/state.py.
- Ajout de nouveaux stubs pour les services d'audit et de validation des entrées, renforçant ainsi la structure des tests.
- Intégration de la classe InputSanitizer pour valider les réponses du Wizard, garantissant la sécurité des entrées utilisateur.
- Mise à jour de la documentation pour refléter les nouvelles fonctionnalités et la séparation des responsabilités dans l'architecture du projet.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,9 +122,9 @@ static_analysis:
   stage: test
   script:
     - echo "── Running mypy ──"
-    - mypy frontend/frontend/state.py --ignore-missing-imports --no-error-summary || true
+    - mypy frontend/frontend/state.py src/services/ --ignore-missing-imports --no-error-summary || true
     - echo "── Running ruff ──"
-    - ruff check src/ tests/ --output-format=gitlab > ruff-report.json || true
+    - ruff check src/ tests/ frontend/frontend/state.py --output-format=gitlab > ruff-report.json || true
   artifacts:
     when: always
     paths:
